Refacter: swagger for searchbook title
